# ideal-fluid

./: README.md  configure.ac
data/: double.file  ldouble.file  test.file
examples/config/: angular_momentum_001.conf  angular_momentum_001.txt  angular_momentum_002.conf  angular_momentum_002.txt  angular_momentum_002_RV.conf  angular_momentum_002_RV.txt  asym.conf  crapper_001.conf  crapper_001.txt  crapper_002.conf  crapper_002.txt  disc.conf  disc_0000.txt  disc_0001.txt  disc_0002.txt  disc_0003.txt  disc_0005.txt  disc_0006.txt  disc_0007.txt  disc_0008.txt  disc_0009.txt  disc_0010.txt  disc_0011.txt  disc_0012.txt  disc_0013.txt  disc_0013X.txt  disc_0013XX.txt  disc_0013XXX.txt  disc_0014.txt  disc_0015.txt  hplane.conf  init_0000.txt  ntravel_001.conf  ntravel_001.txt  run_001.conf  run_002.conf  run_003.conf  run_005.conf  run_006.conf  run_007.conf  (+23 more)
examples/figures/: run003_initial_data.eps
examples/gplt/: init_cond.plt
examples/scripts/: PetviashviliMethodMk4.m  PetviashviliMethodMk5.m  PetviashviliMethodMk6.m  PetviashviliMethodZk.m  angular-momentum-001.oct  angular-momentum-002-RV.oct  angular-momentum-002.oct  crapper-001.oct  crapper-002.oct  gen-init-disc-second-mode.oct  gen-init-disc-two-poles.oct  octave-workspace  petviashvili.m  run-001.oct  run-002.oct  run-003.oct  run-004.oct  run-005.oct  run-007.oct  run-008.oct  run-009.oct  run-010.oct  run-011.oct  run-012.oct  run-013.oct  run-013X.oct  run-013XX.oct  run-013XXX.oct  run-014.oct  run-015.oct  splash_001.txt  standing-wave-001.oct  standing-wave-002.oct  standing-wave-003.oct  surface_plot.m  travelling-001.oct  travelling-002.oct
examples/scripts/maxima/: LinearWavesSpecial.wxmx  LinearWavesSpecialBackup.wxmx  RotationWavesSpecial.wxmx  TaylorExpansions.wxmx  ZeroMode.wxmx
src/: Makefile  Makefile.am  Makefile.in  ffluid_disc.c  ffluid_hplane.c  main.c
src/array/: array_func.c
src/array/.deps/: array_func.Po
src/headers/: config.h  config.h.in  config.h.in~  fffluid.h  fffluid_mapping.h  ffluid.h  ffluidq.h  stamp-h1
src/headers/ffluid/: .math.h.swp  array_func.h  equations.h  io.h  mapping.h  math.h  memory.h  messages.h  stepping.h  timemarching.h
src/headers/ffluidq/: ffluidq_mapping.h
src/io/: .output_disc.c.swp  input.c  input_data.c  input_parameters.c  io.c  output.c  output_disc.c  output_halfplane.c
src/io/.deps/: input_data.Po  input_parameters.Po  io.Po  output_disc.Po  output_halfplane.Po
src/mapping/: disc.c  discq.c  halfplane.c  halfplaneq.c  mapping.c  mapping.h
src/mapping/.deps/: disc.Po  halfplane.Po  mapping.Po
src/math/: disc_surface.c  equations.c  equations.c.bak  equations.c.thor  halfplane_surface.c
src/math/.deps/: disc_surface.Po  equations.Po  halfplane_surface.Po
src/memory/: memory.c  memory.h  memoryq.c
src/memory/.deps/: memory.Po
src/messages/: misc.c
src/messages/.deps/: misc.Po
src/timemarching/: runge_kutta_4.c  runge_kutta_6.c  stepping.c
src/timemarching/.deps/: runge_kutta_4.Po  runge_kutta_6.Po  stepping.Po
